<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="application_name">BSeries</string>
    <string name="menu_addSerie">Rechecher / Ajouter une série</string>
    <string name="menu_addSerie2">Rechercher / Ajouter</string>
    <string name="menu_login">Connexion au compte</string>
    <string name="menu_login2">Connexion</string>
    <string name="menu_logout">Déconnexion</string>
    <string name="menu_logout2">Déconnexion</string>
    <string name="menu_find">Rechercher une série</string>
    <string name="menu_find2">Rechercher</string>
    <string name="menu_parameters">Paramètres</string>
    <string name="menu_parameters2">Paramètres</string>
    <string name="menu_friends">Mes amis</string>
    <string name="menu_friends2">Mes amis</string>
    <string name="menu_infosSerie">Plus d\'information sur la série</string>
    <string name="menu_infosSerie2">Plus d\'infos</string>
    <string name="firstRun_message">L\'application BSeries nécéssite un compte BetaSeries pour fonctionner. L\'assistant d\'installation va vous guider pour la connexion ou la création de votre compte. Appuyez sur OK pour continuer.</string>
    <string name="loading_default">Chargement en cours ...</string>
    <string name="loading_login">Connexion en cours ...</string>
    <string name="loading_logout">Deconnexion en cours ...</string>
    <string name="loading_search">Recherche en cours ...</string>
    <string name="home_message">Vous devez vous connecter à votre compte betaseries pour utiliser cette application.\nMenu -> connexion</string>
    <string name="show_notarchived">Active</string>
    <string name="show_archived">Archivé</string>
    <string name="menu_deleteSerie">Supprimer la série</string>
    <string name="menu_deleteSerie2">Supprimer</string>
    <string name="menu_recommendSerie">Recommander cette série </string>
    <string name="menu_recommendSerie2">Recommander</string>
    <string name="menu_archiveSerie">Archiver la série</string>
    <string name="menu_archiveSerie2">Archiver</string>
    <string name="menu_unarchiveSerie">Desarchiver la série</string>
    <string name="menu_unarchiveSerie2">Desarchiver</string>
    <string name="title_shows">BSeries : Séries</string>
    <string name="menu_episodesSerie">Listes des épisodes</string>
    <string name="menu_episodesSerie2">Épisodes</string>
    <string name="header_connected">Connecté</string>
    <string name="menu_markSeenEpisode">Marquer comme vu</string>
    <string name="menu_markSeenEpisode2">Marquer comme vu</string>
    <string name="menu_markUnseenEpisode">Marquer comme non vu</string>
    <string name="menu_markUnseenEpisode2">Marquer comme non vu</string>
    <string name="menu_createAccount">Créer un compte BetaSeries</string>
    <string name="menu_createAccount2">Inscription</string>
    <string name="menu_tutorial">Aide</string>
    <string name="menu_tutorial2">Aide</string>
    <string name="home_planning">Planning</string>
    <string name="home_series">Mes séries</string>
    <string name="home_episodes">Mes épisodes à voir</string>
    <string name="home_friends">Amis</string>
    <string name="home_profile">Profil</string>
    <string name="home_badges">Badges</string>
    <string name="search_show">Rechercher une série</string>
    <string name="search_member">Rechercher une personne</string>
    <string name="search_show_and_member">Rechercher une série ou une personne</string>
    <string name="home_loginText">Connectez-vous à l\'aide de votre compte BetaSeries :</string>
    <string name="home_username_hint">Nom d\'utilisateur</string>
    <string name="home_password_hint">Mot de passe</string>
    <string name="home_connexion">Connexion</string>
    <string name="home_noAccount">Vous n\'avez pas de compte BetaSeries ? Cliquez pour créer votre compte : </string>
    <string name="home_register">S\'inscrire</string>
    <string name="home_registerText">Création d\'un compte BetaSeries : </string>
    <string name="home_email_hint">Adresse e-mail</string>
    <string name="home_register2">Inscription</string>
    <string name="time_on_tv">Temps passé devant la TV : </string>
    <string name="time_to_spend">Temps restant : </string>
    <string name="show_notadded">Cliquez sur + pour ajouter</string>
    <string name="error_connexion">Une erreur s\'est produite pendant la connexion à BetaSeries. Il se peut que vous ne soyez pas connecter à internet, ou que le site BetaSeries soit en maintenance. Veuillez reessayer.</string>
    <string name="pref_cat_general">Préférences générales</string>
    <string name="pref_cat_other">Autres</string>
    <string name="pref_cat_episodes">Mes épisodes à voir</string>
    <string name="pref_cat_planning">Planning</string>
    <string name="pref_cat_social">Réseaux sociaux</string>
    <string name="pref_cat_notifications">Notifications</string>
    <string name="pref_item_planningReload">Fréquence de rechargement</string>
    <string name="pref_sum_planningReload">Interval de rechargement du nombre d\'episode non vu (badge)</string>
    <string name="pref_item_badge">Activer le badge</string>
    <string name="pref_sum_badge">Activer le badge indiquant le nombre d\'épisodes non vu. Peut consommer beaucoup de data.</string>
    <string name="pref_item_decalage_1_jour">Sortie francaise</string>
    <string name="pref_sum_decalage_1_jour">Décale la sortie des épisodes de 24h pour correspondre à la sortie francaise</string>
    <string name="pref_sum_decalage_1_jour_disabled">Décale la sortie des épisodes de 24h pour correspondre à la sortie francaise. Désactivé car activé dans votre compte betaseries</string>
    <string name="pref_item_hide_notaired">Montrer uniquement les épisodes sortis</string>
    <string name="pref_sum_hide_notaired">Cache les épisodes à venir (qui ne sont pas encore diffusé)</string>
    <string name="pref_item_cache_clear">Vider le cache</string>
    <string name="pref_sum_cache_clear">Vide completement le cache (miniatures, requêtes, &#8230;)</string>
    <string name="pref_item_onlyone">Dernier épisode uniquement</string>
    <string name="pref_sum_onlyone">Affiche uniquement le dernier épisode non vu de chaque séries</string>
    <string name="pref_confirm_cache_clear">Etes-vous sur de vouloir supprimer le cache ?</string>
    <string name="pref_confirm_cache_cleared">Le cache à été supprimé</string>
    <string name="pref_item_facebook">Publier sur facebook automatiquement</string>
    <string name="pref_sum_facebook">Permet de publier un message sur facebook automatiquement à chaque épisode vu</string>
    <string name="pref_item_twitter">Publier sur twitter automatiquement</string>
    <string name="pref_sum_twitter">Permet de publier un message sur twitter automatiquement à chaque épisode vu</string>
    <string name="pref_item_a_propos">A propos</string>
    <string name="pref_item_notifications">Activer les notifications BetaSeries</string>
    <string name="pref_sum_notifications">Activer les notifications accessible via le bas de page de l\'accueil</string>
    <string name="a_propos">Application créée par Quanturium.</string>

</resources>